project section updates

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                         <ul>
                             <li class='project2'>
                                 <div class='project-img'>
-                                    <img src="./asset/pexels-karolina-grabowska-4021976.jpg" alt="A cocktail drink in a clear glass with 
-                                    lemon slices & mints">
+                                    <img src="./asset/project2.jpg" alt="The Cocktail Library home page">
                                 </div>
                                 <div class='project-info'>
                                     <h3>The Cocktail Library</h3>
@@ -138,7 +137,7 @@
                                 </li>
                                 <li class='project3'>
                                     <div class='project-img'>
-                                        <img src="./asset/project3.jpg" alt="Dine-in website page with images of food">
+                                        <img src="./asset/project3.jpg" alt="Dine-in app home page">
                                     </div>
                                     <div class='project-info'>
                                         <h3>Dine-In</h3>
@@ -154,7 +153,7 @@
                                         <div class='project-links'>
                                             <a class='live-link' href="https://dine-in-app.netlify.app/">Live Site/</a>
                                             <a class ='git-link' href="https://github.com/harah24/project-3">GitHub</a>
-                                        </div>
+                                        </div><!-- end of project-links div -->
                                     </div> <!-- end of project info div -->
                                 </li>
                                 <li class='project4'>
@@ -163,8 +162,9 @@
                                     </div>
                                     <div class='project-info'>
                                         <h3>Giphy Sentiments</h3>
-                                        <p> A unique app that captures & logs the ever-changing emotional state of individuals using Gifs.</p>
                                         <div class='technical-skills'>
+                                            <p> A unique app that captures & logs the ever-changing emotional state of individuals using Gifs. This project was 
+                                        created using team-based development with <a href="https://github.com/JihyeJayPark">Jay,</a> <a href="https://github.com/lucianw9977">Lucian</a> and <a href="https://github.com/GHJBaek">Josh</a></p>
                                             <ul>                                           
                                                 <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
                                                 <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
@@ -172,7 +172,7 @@
                                                 <li><i class="fa-solid fa-gears" alt='Rest APIs icon'></i></li>
                                                 <li><i class="devicon-firebase-plain" alt='Firebase icon'></i></li>
                                             </ul>
-                                        </div>
+                                        </div> <!-- end of technical skills div -->
                                         <div class='project-links'>
                                             <a class='live-link' href="https://giphy-sentiments.netlify.app/">Live Site</a>
                                             <a class ='git-link' href="https://github.com/Giphy-Sentiments">GitHub</a>
